# llm-calibration

./: .gitignore  LICENSE  README.md  pyproject.toml
analysis/: cost_performance_tradeoff.ipynb  oracle_rc_table.ipynb  plot_model_scaling.ipynb  plot_training_set_size_scaling.ipynb  probe_loss_analysis.ipynb
applications/budget_allocation/: README.md  default_config.yaml  evaluate_budget_allocation.py  neurips_config.yaml
applications/passk_simulation/: README.md  result_analysis.ipynb
conf/: config.yaml
conf/dataset/: aime-test.yaml  aime-train.yaml  aime25.yaml  gpqa-train.yaml  gpqa-valid.yaml  gpqa.yaml  gsm8k.yaml  math-500.yaml  math-train.yaml  math-valid.yaml  mmlu.yaml  simpleqa-train.yaml  simpleqa-verified.yaml  triviaqa.yaml
conf/experiment/: default.yaml
conf/model/: openai_compat.yaml
conf/verifier/: string_match.yaml
docs/: index.html
notebooks/: best_linear_probes.ipynb  print_results.ipynb
paper_results/consistency/: gpt-oss-20b.sh  olmo-3-7b-instruct.sh  qwen3-8b-non-thinking.sh
paper_results/construct_capability_calibration_datasets/: gpt-oss-20b.sh  olmo-3-7b-instruct.sh  qwen3-1_7b-non-thinking.sh  qwen3-4b-non-thinking.sh  qwen3-4b-thinking.sh  (+2 more)
rebuttal/: improved_verbalized_confidence_and_ptrue.md  instance_level_discriminative_power.md  reduction_of_training_data_construction_cost.md
scripts/: consistency.py  construct_eval_datasets.py  construct_probing_dataset.py  eval_probe.py  few_shot_verbalized_confidence.py  merge_ground_truth_questions.py  ptrue.py  train_probe.py  verbalize_confidence.py
src/: __init__.py
(+80 files in other folders)
