[project]
name = "rethinking-calibration"
version = "0.1.0"
description = "LLM Calibration Research Codebase"
requires-python = ">=3.12"
dependencies = [
    # Core dependencies
    "torch>=2.8.0",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    # Model backends
    "transformers>=4.57.3",
    "vllm>=0.12.0; sys_platform == 'linux'",
    "openai>=2.13.0",
    # Data
    "datasets>=4.4.1",
    # Utilities
    "tqdm>=4.67.1",
    "numpy",
    "pandas>=2.0.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "hf-transfer>=0.1.9",
    "accelerate>=1.12.0",
    "triton>=3.5.0",
    "kernels>=0.11.5",
    "wandb>=0.23.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
